# KraberCode

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
src/krabercode/: __init__.py  __main__.py
src/krabercode/agent/: __init__.py  context.py  executor.py  history.py  planner.py  system_prompt.py
src/krabercode/cli/: __init__.py  commands.py  output.py  repl.py
src/krabercode/config/: __init__.py  settings.py  storage.py
src/krabercode/llm/: __init__.py  base.py  client.py  messages.py
src/krabercode/mcp/: __init__.py  client.py  registry.py
src/krabercode/tools/: __init__.py  base.py  filesystem.py  git.py  registry.py  shell.py
tests/: conftest.py  test_agent.py  test_cli.py  test_config.py  test_tools.py
